Velociraptor_Project/lectureADC/lectureADC.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:24:01 **** Incremental Build of configuration Debug for project Serveur ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Serveur_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main_thread':
../src/main.c:251:2: warning: implicit declaration of function 'print_web_app_header'; did you mean 'print_app_header'? [-Wimplicit-function-declaration]
  print_web_app_header();
  ^~~~~~~~~~~~~~~~~~~~
  print_app_header
../src/main.c:255:2: warning: implicit declaration of function 'start_web_application'; did you mean 'start_application'? [-Wimplicit-function-declaration]
  start_web_application();
  ^~~~~~~~~~~~~~~~~~~~~
  start_application
../src/main.c: At top level:
../src/main.c:261:6: error: redefinition of 'main_thread'
 void main_thread(void *p){
      ^~~~~~~~~~~
../src/main.c:201:6: note: previous definition of 'main_thread' was here
 void main_thread(void *p)
      ^~~~~~~~~~~
../src/main.c: In function 'main':
../src/main.c:375:53: error: 'fpga_thread' undeclared (first use in this function); did you mean 'main_thread'?
  fpga_thread_handle = sys_thread_new("fpga_thread", fpga_thread, 0,
                                                     ^~~~~~~~~~~
                                                     main_thread
../src/main.c:375:53: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/main.o] Erreur 1
20:24:12 **** Auto Build of configuration Debug for project Serveur ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Serveur_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main_thread':
../src/main.c:251:2: warning: implicit declaration of function 'print_web_app_header'; did you mean 'print_app_header'? [-Wimplicit-function-declaration]
  print_web_app_header();
  ^~~~~~~~~~~~~~~~~~~~
  print_app_header
../src/main.c:255:2: warning: implicit declaration of function 'start_web_application'; did you mean 'start_application'? [-Wimplicit-function-declaration]
  start_web_application();
  ^~~~~~~~~~~~~~~~~~~~~
  start_application
'Finished building: ../src/main.c'
' '
'Building target: Serveur.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../Serveur_bsp/ps7_cortexa9_0/lib -o "Serveur.elf"  ./src/http_server/http_response.o ./src/http_server/platform_fs.o ./src/http_server/platform_gpio.o ./src/http_server/web_utils.o ./src/http_server/webserver.o  ./src/iic_phyreset.o ./src/main.o   -Wl,--start-group,-lxil,-lfreertos,-lgcc,-lc,--end-group -Wl,--start-group,-lxil,-llwip4,-lgcc,-lc,--end-group -Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,--end-group
'Finished building target: Serveur.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size Serveur.elf  |tee "Serveur.elf.size"
   text	   data	    bss	    dec	    hex	filename
 292960	   4336	17946912	18244208	1166270	Serveur.elf
'Finished building: Serveur.elf.size'
' '
20:25:43 **** Auto Build of configuration Debug for project Serveur ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Serveur_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main_thread':
../src/main.c:251:2: warning: implicit declaration of function 'print_web_app_header'; did you mean 'print_app_header'? [-Wimplicit-function-declaration]
  print_web_app_header();
  ^~~~~~~~~~~~~~~~~~~~
  print_app_header
../src/main.c:255:2: warning: implicit declaration of function 'start_web_application'; did you mean 'start_application'? [-Wimplicit-function-declaration]
  start_web_application();
  ^~~~~~~~~~~~~~~~~~~~~
  start_application
'Finished building: ../src/main.c'
' '
'Building target: Serveur.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../Serveur_bsp/ps7_cortexa9_0/lib -o "Serveur.elf"  ./src/http_server/http_response.o ./src/http_server/platform_fs.o ./src/http_server/platform_gpio.o ./src/http_server/web_utils.o ./src/http_server/webserver.o  ./src/iic_phyreset.o ./src/main.o   -Wl,--start-group,-lxil,-lfreertos,-lgcc,-lc,--end-group -Wl,--start-group,-lxil,-llwip4,-lgcc,-lc,--end-group -Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,--end-group
'Finished building target: Serveur.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size Serveur.elf  |tee "Serveur.elf.size"
   text	   data	    bss	    dec	    hex	filename
 292960	   4336	17946912	18244208	1166270	Serveur.elf
'Finished building: Serveur.elf.size'
' '
20:25:56 **** Incremental Build of configuration Debug for project Serveur ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Rien à faire pour « main-build ».
